openta/microk8s/5-dbserver.yaml
kind: Pod
apiVersion: v1
metadata:
  name: db-server
  labels:
    app: db-server
spec:
    volumes:
    - name: minikube-vol
      persistentVolumeClaim:
        claimName: minikube-pvc

    restartPolicy: Always
    containers:
      - name: postgres
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: minikube-vol
        ports:
          - containerPort: 5432
            name: "port-5432"
        image: postgres:14-alpine
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: db-server
  labels:
    run: db-server
spec:
  #type: NodePort
  ports:
    - name: "port-5432"
      protocol: TCP
      port: 5432 
      targetPort: 5432


  selector:
    app: db-server
